--- a/delightreading-backend/package.json
+++ b/delightreading-backend/package.json
@@ -9,6 +9,7 @@
   "author": "Bowden Kelly",
   "license": "MIT",
   "scripts": {
+    "migrations-run": "ts-node ./node_modules/typeorm/cli.js migrations:run",
     "start": "npm run serve",
     "build": "npm run build-ts && npm run tslint",
     "serve": "node dist/server.js",
@@ -40,7 +41,9 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
-    "request": "^2.83.0"
+    "pg": "^7.4.1",
+    "request": "^2.83.0",
+    "typeorm": "^0.1.11"
   },
   "devDependencies": {
     "@types/async": "^2.0.45",
@@ -56,14 +59,14 @@
     "@types/lodash": "^4.14.91",
     "@types/lusca": "^1.5.0",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^7.0.50",
+    "@types/node": "^7.0.52",
     "@types/nodemailer": "^1.3.32",
     "@types/passport": "^0.3.3",
     "@types/passport-facebook": "^2.1.3",
     "@types/passport-local": "^1.0.32",
     "@types/request": "^2.0.9",
-    "@types/supertest": "^2.0.4",
     "@types/shelljs": "^0.7.7",
+    "@types/supertest": "^2.0.4",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "jest": "^21.2.1",
