--- a/delightreading-backend/tsconfig.json
+++ b/delightreading-backend/tsconfig.json
@@ -1,5 +1,9 @@
 {
     "compilerOptions": {
+        "lib": [
+            "es6",
+            "dom"
+        ],
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": true,
@@ -12,7 +16,9 @@
                 "node_modules/*",
                 "src/types/*"
             ]
-        }
+        },
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true
     },
     "include": [
         "src/**/*"
