--- a/delightreading-backend/package.json
+++ b/delightreading-backend/package.json
@@ -37,11 +37,14 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "fbgraph": "^1.4.1",
+    "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.4",
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "request": "^2.83.0",
@@ -59,6 +62,7 @@
     "@types/express": "^4.0.35",
     "@types/express-session": "^1.15.6",
     "@types/jest": "^21.1.8",
+    "@types/jsonwebtoken": "^7.2.5",
     "@types/lodash": "^4.14.91",
     "@types/lusca": "^1.5.0",
     "@types/morgan": "^1.7.32",
@@ -66,6 +70,7 @@
     "@types/nodemailer": "^1.3.32",
     "@types/passport": "^0.3.3",
     "@types/passport-facebook": "^2.1.3",
+    "@types/passport-google-oauth": "^1.0.37",
     "@types/passport-local": "^1.0.32",
     "@types/request": "^2.0.9",
     "@types/shelljs": "^0.7.7",
