Google auth integration

--- a/delightreading-backend/.env.example
+++ b/delightreading-backend/.env.example
@@ -1,5 +1,6 @@
-MONGODB_URI=mongodb://localhost:27017
-MONGOLAB_URI=mongodb://localhost:27017
+AUTH_TOKEN_AUDIENCE=sns-login
+AUTH_TOKEN_ISSUER=demo.delightreading.com
+AUTH_TOKEN_SECRET=ASFLKELKJDLFKSF
 
 SESSION_SECRET=ashdfjhasdlkjfhalksdjhflak
 
