--- a/delightreading-backend/package.json
+++ b/delightreading-backend/package.json
@@ -26,11 +26,13 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
+    "@types/passport-jwt": "^3.0.1",
     "async": "^2.6.0",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
+    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
@@ -45,6 +47,7 @@
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-google-oauth20": "^1.0.0",
+    "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "request": "^2.83.0",
@@ -57,6 +60,7 @@
     "@types/bluebird": "^3.5.18",
     "@types/body-parser": "^1.16.8",
     "@types/compression": "0.0.33",
+    "@types/cors": "^2.8.3",
     "@types/dotenv": "^4.0.2",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.0.35",
