--- a/delightreading-client-web/package.json
+++ b/delightreading-client-web/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "bootstrap": "^4.0.0",
     "bootstrap-datepicker": "^1.7.1",
     "jquery": "^3.3.1",
