--- a/delightreading-backend/package.json
+++ b/delightreading-backend/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "migrations-run": "ts-node ./node_modules/typeorm/cli.js migrations:run",
-    "migrations-gen": "ts-node ./node_modules/typeorm/cli.js migrations:generate ",
+    "migrations-gen": "ts-node ./node_modules/typeorm/cli.js migrations:generate -n RefactorEntities",
     "start": "npm run serve",
     "build": "npm run build-ts && npm run tslint",
     "serve": "node dist/server.js",
@@ -50,6 +50,7 @@
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
+    "pino": "^4.10.4",
     "request": "^2.83.0",
     "typeorm": "^0.1.11",
     "uuid": "^3.2.1"
@@ -76,6 +77,7 @@
     "@types/passport-facebook": "^2.1.3",
     "@types/passport-google-oauth": "^1.0.37",
     "@types/passport-local": "^1.0.32",
+    "@types/pino": "^4.7.1",
     "@types/request": "^2.0.9",
     "@types/shelljs": "^0.7.7",
     "@types/supertest": "^2.0.4",
