--- a/delightreading-client-web/package.json
+++ b/delightreading-client-web/package.json
@@ -19,6 +19,7 @@
     "bootstrap-datepicker": "^1.7.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
+    "typeahead.js": "^0.11.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
