--- a/delightreading-client-web/package.json
+++ b/delightreading-client-web/package.json
@@ -21,7 +21,8 @@
     "popper.js": "^1.12.9",
     "typeahead.js": "^0.11.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
