--- a/delightreading-client-web/package.json
+++ b/delightreading-client-web/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.0.0",
     "bootstrap-datepicker": "^1.7.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "popper.js": "^1.12.9",
     "typeahead.js": "^0.11.1",
     "vue": "^2.5.2",
