--- a/delightreading-backend/package.json
+++ b/delightreading-backend/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.4",
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.1",
+    "nuxt": "^1.3.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
