--- a/delightreading-backend/.env.localdev
+++ b/delightreading-backend/.env.localdev
@@ -1,4 +1,5 @@
 UI_BASE_URL=http://localhost:8080
+SERVER_BASE_URL=http://localhost:9090
 
 AUTH_TOKEN_AUDIENCE=sns-login
 AUTH_TOKEN_ISSUER=demo.delightreading.com
