--- a/delightreading-client-web/package.json
+++ b/delightreading-client-web/package.json
@@ -17,11 +17,11 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0",
-    "bootstrap-datepicker": "^1.7.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "popper.js": "^1.12.9",
     "typeahead.js": "^0.11.1",
+    "v-calendar": "^0.6.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
