--- a/delightreading-client-web/package.json
+++ b/delightreading-client-web/package.json
@@ -19,10 +19,12 @@
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
+    "moment": "^2.20.1",
     "popper.js": "^1.12.9",
     "typeahead.js": "^0.11.1",
     "v-calendar": "^0.6.3",
     "vue": "^2.5.2",
+    "vue-multiselect": "^2.0.8",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
