--- a/delightreading-backend/package.json
+++ b/delightreading-backend/package.json
@@ -41,6 +41,7 @@
     "fbgraph": "^1.4.1",
     "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.4",
+    "moment": "^2.21.0",
     "morgan": "^1.9.0",
     "nodemailer": "^4.4.1",
     "nuxt": "^1.3.0",
