--- a/delightreading-backend/package.json
+++ b/delightreading-backend/package.json
@@ -14,6 +14,7 @@
     "start": "npm run serve",
     "build": "npm run build-ts && npm run tslint",
     "serve": "node dist/server.js",
+    "start-ts": "ts-node src/server.ts",
     "watch-node": "nodemon dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"npm run watch-ts\" \"npm run watch-node\"",
     "test": "jest --forceExit --verbose --runInBand",
