Add Facebook. Improve front page

--- a/delightreading-backend/.env.localdev
+++ b/delightreading-backend/.env.localdev
@@ -9,3 +9,6 @@ SESSION_SECRET=ashdfjhasdlkjfhalksdjhflak
 
 GOOGLE_CLIENT_ID=366814786140-76mf4b3p2o2o3eedu0ufu9djqr40pkf7.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=gcIQIK27YjNp0iqPdXzppvFJ
+
+FACEBOOK_ID=1336329176483431
+FACEBOOK_SECRET=65fdaa0417e07e3ba6d9611404797094
