--- a/delightreading-server/src/main/resources/application.yaml
+++ b/delightreading-server/src/main/resources/application.yaml
@@ -20,7 +20,7 @@ spring.profiles.include: 'secrets'
 ## Google
 spring.security.oauth2.client.registration.google.client-id:
 spring.security.oauth2.client.registration.google.client-secret:
-spring.security.oauth2.client.registration.google.scope: https://www.googleapis.com/auth/plus.login
+spring.security.oauth2.client.registration.google.scope: profile, email, https://www.googleapis.com/auth/plus.login
 
 
 ## LinkedIn
