--- a/delightreading-server/src/main/resources/application.yaml
+++ b/delightreading-server/src/main/resources/application.yaml
@@ -6,7 +6,10 @@ spring.datasource.driverClassName: org.postgresql.Driver
 spring.liquibase.change-log: classpath:/db/changelog/db.changelog-master.xml
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults: false
 
-
+spring.jpa.properties.hibernate.show_sql: true
+spring.jpa.properties.hibernate.use_sql_comments: true
+spring.jpa.properties.hibernate.format_sql: true
+spring.jpa.properties.hibernate.type: trace
 
 #security.user.name: admin
 #security.user.password: secret
