Add Kotlin-based backend app with user component

--- a/delightreading-backend/build.gradle
+++ b/delightreading-backend/build.gradle
@@ -22,6 +22,7 @@ plugins {
 //    id 'org.springframework.boot'
 //    id 'io.spring.dependency-management'
 
+    id 'idea'
     id "org.jetbrains.kotlin.jvm" version "1.3.10"
     id "org.jetbrains.kotlin.plugin.spring" version "1.3.10"
     id "org.jetbrains.kotlin.plugin.jpa" version "1.3.10"
@@ -47,8 +48,12 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-hateoas')
     implementation('org.springframework.boot:spring-boot-starter-security')
     implementation('org.springframework.boot:spring-boot-starter-web')
+
+    implementation('org.springframework.security:spring-security-oauth2-client')
+    implementation('org.springframework.security:spring-security-oauth2-jose')
+
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
-//    implementation('org.liquibase:liquibase-core')
+    implementation('org.liquibase:liquibase-core')
     implementation('org.springframework.retry:spring-retry')
 
     implementation('com.mysema.querydsl:querydsl-jpa:3.7.4')
@@ -61,8 +66,13 @@ dependencies {
     runtimeOnly('com.h2database:h2')
     runtimeOnly('org.postgresql:postgresql')
     compileOnly('org.projectlombok:lombok')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    // @see: https://spring.io/guides/tutorials/spring-boot-kotlin/
+    testImplementation('org.springframework.boot:spring-boot-starter-test'){
+        exclude module: 'junit'
+    }
     testImplementation('org.springframework.security:spring-security-test')
+    testImplementation('org.junit.jupiter:junit-jupiter-api')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
 }
 
 compileKotlin {
@@ -76,4 +86,16 @@ compileTestKotlin {
         freeCompilerArgs = ["-Xjsr305=strict"]
         jvmTarget = "1.8"
     }
+}
+
+idea {
+    module {
+        def kaptMain = file('build/generated/source/kapt/main')
+        sourceDirs += kaptMain
+        generatedSourceDirs += kaptMain
+    }
+}
+
+test {
+    useJUnitPlatform()
 }
